deploy: 0cf2ecd5080d956a15cda78334dbd4171ace18c5

--- a/Part-04 Text Representations.html
+++ b/Part-04 Text Representations.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KeyedVectors API &#8212; My book title</title>
+    <title>KeyedVectors API &#8212; Quick NLP Projects</title>
     
   <link rel="stylesheet" href="_static/css/index.f658d18f9b420779cfdf24aa0a7e2d77.css">
 
@@ -75,7 +75,7 @@
 <a class="navbar-brand text-wrap" href="index.html">
   
   
-  <h1 class="site-logo" id="site-title">My book title</h1>
+  <h1 class="site-logo" id="site-title">Quick NLP Projects</h1>
   
 </a>
 </div><form class="bd-search d-flex align-items-center" action="search.html" method="get">
