deploy: d0a83b1525dca5da2e4feb2feb7760493c84be78

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="Refresh" content="0; url=Part-01.html" />
+<meta http-equiv="Refresh" content="0; url=01-TextClassification_with_sklearn_spaCy.html" />
